# opencatalog

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/opencatalog-cli/: Cargo.toml
crates/opencatalog-cli/src/: main.rs
crates/opencatalog-core/: Cargo.toml
crates/opencatalog-core/src/: error.rs  traits.rs  types.rs
crates/opencatalog-crawler/: Cargo.toml
crates/opencatalog-crawler/src/: datascan.rs  dbt.rs  lib.rs  openingest.rs  openlake.rs  registry.rs
crates/opencatalog-glossary/: Cargo.toml
crates/opencatalog-glossary/src/: lib.rs
crates/opencatalog-lineage/: Cargo.toml
crates/opencatalog-lineage/src/: lib.rs  openlineage.rs
crates/opencatalog-llm/: Cargo.toml
crates/opencatalog-llm/src/: lib.rs
crates/opencatalog-policy/: Cargo.toml
crates/opencatalog-policy/src/: lib.rs
crates/opencatalog-server/: Cargo.toml
crates/opencatalog-server/src/: config.rs  lib.rs  main.rs
crates/opencatalog-server/src/mcp/: handler.rs  mod.rs  tools.rs
crates/opencatalog-server/src/middleware/: auth.rs  rate_limit.rs
crates/opencatalog-server/src/rest/: audit.rs  crawls.rs  datasets.rs  datasources.rs  glossary.rs  health.rs  metadata.rs  metrics.rs  mod.rs  policies.rs  search.rs
crates/opencatalog-store/: Cargo.toml
crates/opencatalog-store/src/: lib.rs  memory.rs  sqlite.rs
crates/opencatalog-tests/: Cargo.toml
crates/opencatalog-tests/tests/: api_tests.rs
demo/: Dockerfile  demo.py  docker-compose.yml
docs/: architecture.md  getting-started.md
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: ApiKeyManager.tsx  DatasetDetail.tsx  DatasetsPage.tsx  GlossaryPage.tsx  LineageView.tsx  LoginPage.tsx  PoliciesPage.tsx  SearchBar.tsx
