[workspace]
resolver = "2"
members = [
    "crates/opencatalog-core",
    "crates/opencatalog-store",
    "crates/opencatalog-crawler",
    "crates/opencatalog-lineage",
    "crates/opencatalog-glossary",
    "crates/opencatalog-policy",
    "crates/opencatalog-llm",
    "crates/opencatalog-server",
    "crates/opencatalog-cli",
    "crates/opencatalog-tests",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
petgraph = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlparser = "0.55"
regex = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Local workspace crates
opencatalog-core = { path = "crates/opencatalog-core" }
opencatalog-store = { path = "crates/opencatalog-store" }
opencatalog-crawler = { path = "crates/opencatalog-crawler" }
opencatalog-lineage = { path = "crates/opencatalog-lineage" }
opencatalog-glossary = { path = "crates/opencatalog-glossary" }
opencatalog-policy = { path = "crates/opencatalog-policy" }
opencatalog-llm = { path = "crates/opencatalog-llm" }
opencatalog-server = { path = "crates/opencatalog-server" }
opencatalog-cli = { path = "crates/opencatalog-cli" }
opencatalog-tests = { path = "crates/opencatalog-tests" }
