[package]
name = "opencatalog-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opencatalog"
path = "src/main.rs"

[dependencies]
opencatalog-core.workspace = true
opencatalog-store.workspace = true
opencatalog-crawler.workspace = true
opencatalog-lineage.workspace = true
opencatalog-policy.workspace = true
opencatalog-llm.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
