[package]
name = "opencatalog-crawler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencatalog-core.workspace = true
opencatalog-store.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
regex.workspace = true
reqwest.workspace = true
