[package]
name = "opencatalog-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opencatalog-core.workspace = true
opencatalog-store.workspace = true
opencatalog-crawler.workspace = true
opencatalog-lineage.workspace = true
opencatalog-glossary.workspace = true
opencatalog-policy.workspace = true
opencatalog-llm.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
async-trait.workspace = true
futures.workspace = true
clap.workspace = true
parking_lot = "0.12"
