[package]
name = "opencatalog-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
opencatalog-core.workspace = true
opencatalog-store.workspace = true
opencatalog-crawler.workspace = true
opencatalog-lineage.workspace = true
opencatalog-glossary.workspace = true
opencatalog-policy.workspace = true
opencatalog-server.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
